# nosqlite-rust

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  mydb.nosqlite  search-index.js  settings.html  src-files.js
.cargo/: config.toml
.github/workflows/: deploy-docs.yml  test.yml
nosqlite_cli/: all.html  fn.main.html  index.html  sidebar-items.js
nosqlite_cli/cli/: index.html  sidebar-items.js
nosqlite_cli/cli/commands/: index.html  sidebar-items.js
nosqlite_cli/cli/flags/: enum.CliFlags.html  fn.parse_and_clean_args.html  index.html
nosqlite_cli/cli/repl/: fn.execute_command.html  fn.get_db_path.html  fn.handle_input.html  fn.start_repl.html  index.html  sidebar-items.js
nosqlite_cli/engine/: index.html
nosqlite_cli/engine/error/: index.html  sidebar-items.js
nosqlite_cli/engine/models/: index.html  sidebar-items.js
nosqlite_cli/engine/nosqlite/: index.html  struct.Nosqlite.html
nosqlite_cli/engine/services/: index.html  sidebar-items.js
nosqlite_rust/: all.html  index.html  sidebar-items.js
nosqlite_rust/cli/: index.html
nosqlite_rust/cli/commands/: index.html  sidebar-items.js
nosqlite_rust/engine/: index.html  sidebar-items.js
search.desc/nosqlite_cli/: nosqlite_cli-desc-0-.js
search.desc/nosqlite_rust/: nosqlite_rust-desc-0-.js
src/: lib.rs  main.rs
src/cli/: commands.rs  flags.rs  mod.rs  repl.rs
src/engine/: mod.rs  nosqlite.rs
src/nosqlite_cli/: main.rs.html
src/nosqlite_rust/: lib.rs.html
tests/: unit_test.rs
tests/unit/: collection.rs  database.rs  document.rs  file.rs  mod.rs  nosqlite.rs
(+255 files in other folders)
