[package]
name = "nosqlite-rust"
version = "0.1.0"
edition = "2021"
readme = "README.md"
categories = ["database-implementations", "no-sql", "cryptography"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
aes-gcm = { version = "*", features = ["aes"] }
rand = "*"
base64 = "*"
sha2 = "*"
hex = "*"
anyhow = "*"
uuid = { version = "*", features = ["v4"] }
tempfile = "*"
chrono = "*"